<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Docházka</string>
    <string name="navigation_drawer_open">Otevřít navigaci</string>
    <string name="navigation_drawer_close">Zavřít navigaci</string>
    <string name="nav_header_title">Docházka  %1$s</string>
    <string name="nav_header_subtitle">Registrace směn</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="ok">OK</string>
    <string name="cancel">Zrušit</string>
    <string name="today">Dnes</string>
    <string name="timeHint">0:00</string>
    <string name="vacationHint">20</string>
    <string name="dateHint">24.11.2019</string>
    <string name="plusNumber">+ %1$s</string>
    <string name="justNumber">%1$d</string>

    <!-- EMPTY VIEW popisek -->
    <string name="empty_view_title_text">Žádné směny tento měsíc</string>
    <string name="empty_view_subtitle_text">Přidejte směnu</string>

    <!-- SETTINGS stranka -->
    <string name="settingsDefaultArrivalTime">Výchozí čas příchodu : </string>
    <string name="settingsDefaultDepartureTime">Výchozí čas odchodu : </string>
    <string name="settingsDefaultBreakLength">Výchozí délka pauzy : </string>
    <string name="settingsDefaultShiftLength">Délka směny : </string>
    <string name="settingsDefaultVacation">Dní dovolené za rok :</string>
    <string name="settingsOvertimeCorrection">Ruční úprava přesčasu (m) : </string>
    <string name="settingsHolidayCorrection">Ruční úprava dovolené (D) : </string>
    <string name="settingsDefaultValues">Výchozí hodnoty</string>
    <string name="settingsManualCorrection">Manuální korekce</string>
    <string name="settingsColorTheme">Barevné schéma aplikace</string>

    <!-- SHIFT stranka -->
    <string name="date">Datum : </string>
    <string name="arrivalTime">Příchod :\u0020</string>
    <string name="departureTime">Odchod :\u0020</string>
    <string name="breakLength">Pauza :\u0020</string>
    <string name="shiftLength">Odpracováno :\u0020</string>
    <string name="overtimeLength">Přesčas :\u0020</string>
    <string name="holidayType">Typ směny :\u0020</string>

    <!-- TOASTS -->
    <string name="defaults_loaded">Načteny výchozí hodnoty.</string>
    <string name="editor_insert_shift_failed">Chyba při přidávání směny</string>
    <string name="editor_insert_shift_successful">Směna uložena</string>
    <string name="editor_update_shift_failed">Chyba při upravování směny</string>
    <string name="editor_update_shift_successful">Směna upravena</string>
    <string name="empty_date_warning">Datum nemůže být nevyplněno</string>
    <string name="empty_arrival_warning">Čas příchodu nemůže být nevyplněn</string>
    <string name="empty_departure_warning">Čas odchodu nemůže být nevyplněn</string>
    <string name="empty_break_warning">Délka pauzy nemůže být nevyplněna</string>
    <string name="empty_holiday_warning">Typ směny musí být zadán</string>
    <string name="used_date_warning">Pro toto datum již směna existuje</string>
    <string name="settings_saved">Nastavení uloženo</string>
    <string name="correctionDone">Korekce provedena</string>
    <string name="addMonthFailed">Chyba při přidávání přesčasu pro minulý měsíc</string>
    <string name="nothingToSave">Neprovedena žádná změna.</string>

    <!-- popisky menu -->
    <string name="action_preview">Podrobnosti měsíce</string>
    <string name="action_settings">Nastavení</string>
    <string name="action_dummy">Insert Dummy Data</string>
    <string name="action_add">Přidat směnu</string>
    <string name="action_shiftsTable">Měsíční výpis</string>
    <string name="action_about">O aplikaci</string>
    <string name="menuTitleSave">Uložit</string>
    <string name="menuTitleDelete">Smazat</string>
    <string name="menuTitleExportPdf">Export do PDF</string>
    <string name="menuTitleOthers">Ostatní</string>

    <!-- Popisky stranek -->
    <string name="shiftsTableLabel">Měsíční výpis</string>
    <string name="settingsLabel">Nastavení</string>
    <string name="settingsDefaultLabel">Výchozí hodnoty</string>
    <string name="addShift">Přidat směnu</string>
    <string name="editShift">Upravit směnu</string>
    <string name="previewLabel">Podrobnosti měsíce</string>

    <!-- DISCARD DIALOG -->
    <string name="unsaved_changes_dialog_msg">Zrušit změny a odejít?</string>
    <string name="discard">Zrušit</string>
    <string name="keep_editing">Pokračovat v úpravě</string>

    <!-- DELETE acceptance dialog -->
    <string name="delete_acceptance_dialog_msg">Skutečně chcete smazat tuto směnu?</string>
    <string name="delete">Smazat</string>
    <string name="keep_shift">Zpět</string>

    <!-- RESTART  dialog -->
    <string name="restart_app_dialog_msg">Změna barevného tématu vyžaduje restart aplikace.</string>
    <string name="shutdown">Restartovat aplikaci</string>

    <!-- UPDATE  dialog -->
    <string name="makeUpdateDialogMsg">Po kliknutí na OK se do 10 sekund spustí update. Kliknutím na Zrušit přerušíte update. Pokud se update nespustí sám, prosím vyčkejte na zobrazení \"Provést update ručně\" a klikněte na něj. Stáhne se instalační balíček, takže doporučujeme spouštět update jen na WI-FI</string>

    <!-- SPINNER Shift types -->
    <string name="regular_shift">Směna</string>

    <!-- SHIFTS TABLE popisky -->
    <string name="regularShift">Směna</string>
    <string name="compensation">Náhradní volno</string>
    <string name="publicHoliday">Státní svátek</string>
    <string name="vacation">Dovolená</string>
    <string name="incomplete">Nekompletní záznam</string>

    <!-- MAIN SCREEN popisky -->
    <string name="thisMonthOvertime">Tento měsíc přesčasů:\u0020</string>
    <string name="firstRow">%1$s %2$d</string>
    <string name="secondRowLabel">Odpracováno:</string>
    <string name="secondRow">%1$d dní z %2$d</string>
    <string name="thirdRowLabel">Převod pro další měsíc:</string>
    <string name="thirdRow">%1$s h</string>
    <!--<string name="thirdRow">tento: %1$s / z minula %2$s</string>-->
    <string name="todayShiftArrivalLabel">Příchod: %1$s</string>
    <string name="todayShiftDepartureLabel">Odchod: %1$s</string>
    <string name="todayShiftArrivalNaLabel">Příchod: nezadáno</string>
    <string name="todayShiftDepartureNaLabel">Odchod: nezadáno</string>
    <string name="arriveTooltip">Zadejte čas příchodu do práce</string>
    <string name="departureTooltip">Zadejte čas odchodu z práce</string>
    <string name="todayShiftLabel">Dnešní směna:</string>
    <string name="arrivalNeeded">První musíte zadat čas příchodu</string>
    <string name="updateAvailable">Je dostupná nová verze v.%1$d</string>
    <string name="manualUpdateLabel">Provést update ručně</string>

    <!-- PREVIEW popisky -->
    <string name="workHoursPlan">Předpis práce:</string>
    <string name="workHoursDone">Odpracovaná doba:</string>
    <string name="workHoursMonthlyDifference">Měsíční rozdíl:</string>
    <string name="workHoursToNextMonth">Převod pro další měsíc:</string>
    <string name="usedHoliday">Použitá dovolená:</string>
    <string name="remainingHoliday">Zbývající dovolená:</string>
    <string name="publicHolidays">Státní svátky:</string>
    <string name="overtimeFromLastMonth">Převod z minulého měsíce:</string>
    <string name="exportDialogMsg">Exportovat podrobnosti tohoto měsíce do PDF? Soubor bude uložen ve složce \"Download\"</string>
    <string name="exportSuccessful">Soubor vyexportován.</string>
    <string name="exportUnSuccessful">Export selhal.</string>

    <!-- THEME popisky -->
    <string name="darkTheme">Tmavé téma:</string>

    <!-- ABOUT popisky -->
    <string name="aboutFirstRow">Docházka </string>
    <string name="aboutSecondRow">Verze: %1$s</string>
    <string name="aboutThirdRow" tools:ignore="Typos">Autor: Tomáš Podolský </string>
    <string name="aboutFourthRow">Kontakt: podolsky.tomas@gmail.com </string>

    <!-- EXPORT popisky -->
    <string name="exportFirstRow">Podrobný výpis pro měsíc %1$s</string>
    <string name="exportDate">Datum</string>
    <string name="exportDay">Den</string>
    <string name="exportArrival">Příchod</string>
    <string name="exportDeparture">Odchod</string>
    <string name="exportBreak">Pauza</string>
    <string name="exportHoursDone">Odpracováno</string>

</resources>
