<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group> <!--android:checkableBehavior="single"-->
        <item
            android:id="@+id/nav_preview"
            android:icon="@android:drawable/ic_menu_zoom"
            android:title="@string/action_preview" />
        <item
            android:id="@+id/nav_addShift"
            android:icon="@android:drawable/ic_menu_add"
            android:title="@string/action_add" />
        <item
            android:id="@+id/nav_shiftTable"
            android:icon="@android:drawable/ic_menu_my_calendar"
            android:title="@string/action_shiftsTable" />
        <!--<item
            android:id="@+id/nav_get"
            android:icon="@drawable/ic_menu_manage"
            android:title="update"
            app:showAsAction="never" />-->
    </group>

    <item android:title="@string/menuTitleOthers">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/action_settings"
                app:showAsAction="never" />
            <item
                android:id="@+id/nav_about"
                android:icon="@android:drawable/ic_dialog_info"
                android:title="@string/action_about"
                app:showAsAction="never" />
        </menu>
    </item>

</menu>
