<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:enabled="true"
        android:icon="@drawable/ic_menu_manage"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_dummyData"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_upload"
        android:orderInCategory="100"
        android:title="@string/action_dummy"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_add"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_upload"
        android:orderInCategory="100"
        android:title="@string/action_add"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_shiftsTable"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_upload"
        android:orderInCategory="100"
        android:title="@string/action_shiftsTable"
        app:showAsAction="never" />
</menu>
