<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.workhours.SettingsDefault">

    <EditText
        android:id="@+id/defaultArrivalTimeEdit"
        android:layout_width="68dp"
        android:layout_height="52dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:ems="10"
        android:inputType="time"
        android:hint="@string/timeHint"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/settingsDefaultArrivalTime"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/defaultArrivalTimeEdit"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/defaultDepartureTimeEdit"
        android:layout_width="68dp"
        android:layout_height="52dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:ems="10"
        android:inputType="time"
        android:hint="@string/timeHint"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/defaultArrivalTimeEdit"
        tools:ignore="Autofill"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/settingsDefaultDepartureTime"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/defaultDepartureTimeEdit"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/defaultBreakTimeEdit"
        android:layout_width="68dp"
        android:layout_height="52dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:ems="10"
        android:inputType="time"
        android:hint="@string/timeHint"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/defaultDepartureTimeEdit"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/settingsDefaultBreakLength"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/defaultBreakTimeEdit"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/defaultShiftLengthEdit"
        android:layout_width="68dp"
        android:layout_height="52dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:ems="10"
        android:inputType="time"
        android:hint="@string/timeHint"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/defaultBreakTimeEdit"
        tools:ignore="TextFields, Autofill" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settingsDefaultShiftLength"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6"/>

    <EditText
        android:id="@+id/holidayDaysEdit"
        android:layout_width="68dp"
        android:layout_height="52dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:ems="10"
        android:hint="@string/vacationHint"
        tools:ignore="TextFields, Autofill"
        android:textSize="24sp"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/defaultShiftLengthEdit" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settingsDefaultVacation"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView4"/>




</android.support.constraint.ConstraintLayout>